--- a/text/TODO.txt
+++ b/text/TODO.txt
@@ -1,6 +1,14 @@
+■課題
 １．リファクタリング
 　　ボタン関数周りが、冗長なため関数の共通化を行う
 　　テキストごとに配列を持たせているので、連想配列にして１つの箱で値を管理できるようにする
 ２．デザイン
 　　-現在デザインが当たっていないので、デザインを充てる
 ３．チェックボックス、ドロップダウン等を追加
+４．やること詳細の文字数制限追加
+　　-20文字で折り返し追加
+　　-100文字以降で…リーダー追加
+5.タイトル完了、戻す処理追加
+
+■不具合系
+タイトルの入力値が残っている
