--- a/text/TODO.txt
+++ b/text/TODO.txt
@@ -1,7 +1,7 @@
 ■課題
 １．リファクタリング
-　　ボタン関数周りが、冗長なため関数の共通化を行う
-　　テキストごとに配列を持たせているので、連想配列にして１つの箱で値を管理できるようにする
+　　1.1:ボタン関数周りが、冗長なため関数の共通化を行う
+　　1.2:テキストごとに配列を持たせているので、連想配列にして１つの箱で値を管理できるようにする
 ２．デザイン
 　　-現在デザインが当たっていないので、デザインを充てる
 ３．チェックボックス、ドロップダウン等を追加
